# nutri-app

./: .gitignore  README.md
apps/user/: .gitignore  Dockerfile  Pipfile  alembic.ini  docker-compose.yml  main.py  pyproject.toml
apps/user/config/: .env.example  config.py
apps/user/src/: __init__.py  asgi.py  settings.py
apps/user/src/api/: models.py  urls.py
apps/user/src/api/controllers/: user_controller.py
apps/user/src/api/dto/: create_user_dto.py
apps/user/src/api/entities/: user_entity.py
apps/user/src/api/migrations/: 0001_initial.py
apps/user/src/controllers/: user_controller.py
apps/user/src/database/: db_connection.py
apps/user/src/database/migrations/: env.py
apps/user/src/database/migrations/versions/: 20230917_160148_creating_user_model.py
apps/user/src/dto/: create_user_dto.py  update_user_dto.py  user_dto.py
apps/user/src/entities/: user_entity.py
apps/user/src/repositories/: user_repository.py
apps/user/src/services/: user_service.py
core/: pyproject.toml  setup.py
core/constants/Enum/: user_role.py
